Letter Subscription Modification
Subscribed Letter Message change

--- a/checkout.phtml
+++ b/checkout.phtml
@@ -640,7 +640,7 @@ $helper = Mage::helper('onestepcheckout/checkout');
         <?php if($this->settings['enable_newsletter'] && !$this->isSubScribed($customerEmail)): ?>
             <div class="onestepcheckout-enable-newsletter">
                 <input type="checkbox" id="id_subscribe_newsletter" name="subscribe_newsletter" value="1" <?php if($this->settings['newsletter_default_checked']): ?>checked="checked"<?php endif; ?> />
-                <label for="id_subscribe_newsletter"><?php echo $this->__('Subscribe to our newsletter'); ?></label>
+                <label for="id_subscribe_newsletter"><?php echo $this->__('Yes! I\'d like to hear about new products and promotions'); ?></label>
             </div>
         <?php endif; ?>
 
